--- a/style.css
+++ b/style.css
@@ -1,28 +1,78 @@
 body{
+
     display: flex;
     flex-direction: column;
 }
 
+.header .left{
+    font-size: 20px;
+    color: #e5e7eb;
+    font-weight: bold;
+}
+
 .header{
+    padding: 5px 20px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: #1f2937;
+
+
 }
+
 
 ul{
     display: flex;
     flex-direction: row;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    gap: 10px;
+}
+
+a{
+    font-size: 18px;
+    color: #e5e7eb;
+    text-decoration: none;
 }
 
 .content1{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #1f2937;
+    gap: 20px;
 }
 
 .content1-right img{
     width: 300px;
     height: auto;
+    margin-right: 20px;
+}
+
+.content1-left{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.content1-left .awesome{
+    font-size: 48px;
+    font-weight:bolder;
+    color: #f9faf8;
+}
+
+.content1-left .content1-info{
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.information .info-head{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    align-self: center;
 }
 
 .info-img img{
@@ -37,17 +87,65 @@ ul{
 
 .info-img{
     display: flex;
+    justify-content: center;
+
 }
 
 .info-info{
     display: flex;
+    justify-content: center;
 }
+
+.info-info p{
+    width: 200px;
+    padding: 0 10px 0 30px;
+    text-align: center;
+}
+
+.quote{
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+}
+
+.quote .text{
+    font-size: 36px;
+    font-style: italic;
+    color: #1d2937;
+}
+
+.credit{
+    align-self: flex-end;
+    font-size: 36px;
+    font-weight: bold;
+    color: #1d2937;
+}
+
+
 
 .sign-up{
     display: flex;
     justify-content: space-around;
+    margin: 30px 50px;
+    padding: 10px 20px;
+    background-color: #3882f6;
+}
+
+.sign-up .sign-up-info{
+    display: flex;
+    flex-direction: column;
+    color: white;
+}
+
+.sign-up .button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer{
+    background-color: #1d2937;
     text-align: center;
+    font-size: 18px;
+    color: #e5e7eb;
 }
